--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(progettoLSO C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(progettoLSO main.c FileManager.c FileManager.h PlayfairCipher.c PlayfairCipher.h KeyStruct.h)
+add_executable(progettoLSO main.c FileReader.c FileReader.h PlayfairCipher.c PlayfairCipher.h KeyStruct.h PlayfairUtilities.c PlayfairUtilities.h FileWriter.c FileWriter.h)
